@@ -4,14 +4,17 @@ package edu.colorado.phet.sugarandsaltsolutions.common.view;
 import java.awt.geom.Rectangle2D;
 
 import edu.colorado.phet.common.phetcommon.math.ImmutableVector2D;
+import edu.colorado.phet.common.phetcommon.view.graphics.transforms.ModelViewTransform;
 import edu.colorado.phet.sugarandsaltsolutions.common.model.SugarAndSaltSolutionModel;
+import edu.colorado.phet.sugarandsaltsolutions.common.view.faucet.FaucetNode;
+import edu.umd.cs.piccolo.PNode;
 
 /**
  * Absolute locations in model coordinates (in meters) of where particles flow to leave the drain pipe, and where they leave when they exit the drain pipe.
  *
  * @author Sam Reid
  */
-public class DrainFaucetMetrics {
+public class FaucetMetrics {
 
     //Location where particles enter the drain faucet
     private final ImmutableVector2D inputPoint;
@@ -22,10 +25,23 @@ public class DrainFaucetMetrics {
     //The main model is used to obtain the bounds for the solution
     private SugarAndSaltSolutionModel model;
 
-    public DrainFaucetMetrics( ImmutableVector2D inputPoint, ImmutableVector2D outputPoint, SugarAndSaltSolutionModel model ) {
+    //The width of the opening of the faucet where the water comes out, used to create water rectangle of the right dimension
+    public final double faucetWidth;
+
+    //Creates a FaucetMetrics given the faucet node and root node
+    public FaucetMetrics( ModelViewTransform transform, SugarAndSaltSolutionModel model, PNode rootNode, FaucetNode faucetNode ) {
+        this( model,
+              transform.viewToModel( new ImmutableVector2D( rootNode.globalToLocal( faucetNode.getInputGlobalViewPoint() ) ) ),
+              transform.viewToModel( new ImmutableVector2D( rootNode.globalToLocal( faucetNode.getOutputGlobalViewPoint() ) ) ),
+              transform.viewToModelDeltaX( rootNode.globalToLocal( faucetNode.getGlobalFaucetWidthDimension() ).getWidth() ) );
+    }
+
+    //Creates a FaucetMetrics with the previously computed positions
+    public FaucetMetrics( SugarAndSaltSolutionModel model, ImmutableVector2D inputPoint, ImmutableVector2D outputPoint, double faucetWidth ) {
         this.inputPoint = inputPoint;
         this.outputPoint = outputPoint;
         this.model = model;
+        this.faucetWidth = faucetWidth;
     }
 
     //If the center of the drain pipe input is above the water, move the target input point to be within the drain pipe, but at the surface of the water
